// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Stat renders with color amber 1`] = `
<li
  className="ax-stat-cards__stat ax-stat-cards__stat--amber"
>
  <h3
    className="ax-heading ax-heading--headline ax-space--tiny"
  >
    <span
      className="ax-text--weak"
    >
      Lorem
    </span>
  </h3>
</li>
`;

exports[`Stat renders with color blue 1`] = `
<li
  className="ax-stat-cards__stat ax-stat-cards__stat--blue"
>
  <h3
    className="ax-heading ax-heading--headline ax-space--tiny"
  >
    <span
      className="ax-text--weak"
    >
      Lorem
    </span>
  </h3>
</li>
`;

exports[`Stat renders with color brown 1`] = `
<li
  className="ax-stat-cards__stat ax-stat-cards__stat--brown"
>
  <h3
    className="ax-heading ax-heading--headline ax-space--tiny"
  >
    <span
      className="ax-text--weak"
    >
      Lorem
    </span>
  </h3>
</li>
`;

exports[`Stat renders with color chartreuse 1`] = `
<li
  className="ax-stat-cards__stat ax-stat-cards__stat--chartreuse"
>
  <h3
    className="ax-heading ax-heading--headline ax-space--tiny"
  >
    <span
      className="ax-text--weak"
    >
      Lorem
    </span>
  </h3>
</li>
`;

exports[`Stat renders with color green 1`] = `
<li
  className="ax-stat-cards__stat ax-stat-cards__stat--green"
>
  <h3
    className="ax-heading ax-heading--headline ax-space--tiny"
  >
    <span
      className="ax-text--weak"
    >
      Lorem
    </span>
  </h3>
</li>
`;

exports[`Stat renders with color grey 1`] = `
<li
  className="ax-stat-cards__stat ax-stat-cards__stat--grey"
>
  <h3
    className="ax-heading ax-heading--headline ax-space--tiny"
  >
    <span
      className="ax-text--weak"
    >
      Lorem
    </span>
  </h3>
</li>
`;

exports[`Stat renders with color lilac 1`] = `
<li
  className="ax-stat-cards__stat ax-stat-cards__stat--lilac"
>
  <h3
    className="ax-heading ax-heading--headline ax-space--tiny"
  >
    <span
      className="ax-text--weak"
    >
      Lorem
    </span>
  </h3>
</li>
`;

exports[`Stat renders with color orange 1`] = `
<li
  className="ax-stat-cards__stat ax-stat-cards__stat--orange"
>
  <h3
    className="ax-heading ax-heading--headline ax-space--tiny"
  >
    <span
      className="ax-text--weak"
    >
      Lorem
    </span>
  </h3>
</li>
`;

exports[`Stat renders with color pink 1`] = `
<li
  className="ax-stat-cards__stat ax-stat-cards__stat--pink"
>
  <h3
    className="ax-heading ax-heading--headline ax-space--tiny"
  >
    <span
      className="ax-text--weak"
    >
      Lorem
    </span>
  </h3>
</li>
`;

exports[`Stat renders with color purple 1`] = `
<li
  className="ax-stat-cards__stat ax-stat-cards__stat--purple"
>
  <h3
    className="ax-heading ax-heading--headline ax-space--tiny"
  >
    <span
      className="ax-text--weak"
    >
      Lorem
    </span>
  </h3>
</li>
`;

exports[`Stat renders with color rose 1`] = `
<li
  className="ax-stat-cards__stat ax-stat-cards__stat--rose"
>
  <h3
    className="ax-heading ax-heading--headline ax-space--tiny"
  >
    <span
      className="ax-text--weak"
    >
      Lorem
    </span>
  </h3>
</li>
`;

exports[`Stat renders with color teal 1`] = `
<li
  className="ax-stat-cards__stat ax-stat-cards__stat--teal"
>
  <h3
    className="ax-heading ax-heading--headline ax-space--tiny"
  >
    <span
      className="ax-text--weak"
    >
      Lorem
    </span>
  </h3>
</li>
`;

exports[`Stat renders with defaultProps 1`] = `
<li
  className="ax-stat-cards__stat"
>
  <h3
    className="ax-heading ax-heading--headline ax-space--tiny"
  >
    <span
      className="ax-text--weak"
    >
      Lorem
    </span>
  </h3>
</li>
`;
